example/yaml/database-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mongo:3.4.22-xenial
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
