example/yaml/bookservice-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookservice-service
spec:
  selector:
    app: bookservice
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
