example/yaml/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
