example/yaml/bookservice-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookservice-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: bookservice-service
              servicePort: 8080
